Sun Dec  3 15:23:50 2000  Carlos O'Ryan  <coryan@uci.edu>

        * performance-tests/Misc/childbirth_time.cpp:
          Use 'extern "C"' for the thread entry point, this should make
          Sun/CC 5.0 (and other compilers) happy.

Sun Dec  3 08:50:15 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/OS.i: Fixed a cut and paste error. This was from the BUG#
          734 in bugzilla. Thanks to Martin Krumpolec <krumpolec@pobox.sk>
          for reporting this.

Sat Dec  2 05:58:37 2000  Christopher Kohlhoff  <chris@kohlhoff.com>

        * ace/config-win32-borland.h:

          Automatically define WIN32 macro if we are able to
          determine that it is the target platform from pre-
          defined compiler macros.

        * ace/Makefile.bor:

          Added missing template source file for install target.

Sat Dec  2 00:19:38 2000  Marina Spivak  <marina@cs.wustl.edu>

        * bin/auto_run_tests.lst:

          Added RTCORBA/Explicit_Binding test.

Fri Dec 01 21:17:35 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Thread_Manager.cpp:
          More ACE_LEGACY_MODE fixes.

Fri Dec  1 13:49:36 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Log_Msg.cpp:
          Fixed problems on non-legacy Win32 builds.

Fri Dec  1 09:46:15 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Log_Msg.h:
        * ace/Log_Msg.cpp:
          The structured exception handler methods should show up on
          ACE_LEGACY_MODE builds.  Unfortunately, the change from
          ACE_LATEST_AND_GRATEST to LEGACY_MODE didn't work here because
          the LATEST_AND_GREATEST macro was misspelled.

Fri Dec  1 09:30:08 2000  Carlos O'Ryan  <coryan@uci.edu>

        * include/makeinclude/platform_linux.GNU:
          Add support for wxWindows under linux.

Fri Dec  1 10:56:42 2000  Jeff Parsons  <parsons@cs.wustl.edu>

        * include/makeinclude/ace_flags.bor:

          Added definitions necessary for the new smart proxies