@@ -1,4 +1,4 @@
- // $Id$
+// $Id$
 
 #include "URL.h"
 #include "HTTP_URL.h"
@@ -33,7 +33,7 @@ URL_Command::execute (void)
 
   if (check_string.find (".gif") >= 0)
     return 0;
-  
+
   if (check_string.find (".pdf") >= 0)
     return 0;
 
@@ -42,13 +42,13 @@ URL_Command::execute (void)
 
   if (check_string.find (".bmp") >= 0)
     return 0;
-  
+
   if (check_string.find (".jpg") >= 0)
     return 0;
-  
+
   if (this->url_->accept (OPTIONS::instance ()->visitor ()) !=0)
     {
-      ACE_DEBUG ((LM_DEBUG, 
+      ACE_DEBUG ((LM_DEBUG,
                 "Coudnt accept url\n"));
       return -1;
     }
@@ -101,7 +101,7 @@ Command_Processor::execute (void)
 int
 Command_Processor::insert (Command *command)
 {
-  // According to the order specified the commands are removed from the queue. 
+  // According to the order specified the commands are removed from the queue.
   if (this->url_queue_.is_full() != 1)
     {
       if (ACE_OS::strcmp (OPTIONS::instance ()->order (),"FIFO") == 0)
@@ -110,28 +110,26 @@ Command_Processor::insert (Command *command)
             ACE_ERROR_RETURN ((LM_ERROR,
                                "%p\n", "enqueue_tail"),
                               - 1);
-        } 
+        }
       if (ACE_OS::strcmp (OPTIONS::instance ()->order (),"LIFO") == 0)
         {
           if (this->url_queue_.enqueue_head (command) !=0)
             ACE_ERROR_RETURN ((LM_ERROR,
                                "%p\n", "enqueue_head"),
                               - 1);
-        } 
+        }
     }
-  return 0; 
+  return 0;
 }
 
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 template class ACE_Singleton<Options, ACE_Null_Mutex>;
-template class ACE_Unbounded_Queue<Command *>;
 template class ACE_Node<Command *>;
 template class ACE_Unbounded_Queue_Iterator<Command *>;
 template class ACE_Unbounded_Queue<Command *>;
 #elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
 #pragma instantiate ACE_Singleton<Options, ACE_Null_Mutex>
-#pragma instantiate ACE_Unbounded_Queue<Command *>
-#pragma instantiate ACE_Node<Command *> 
+#pragma instantiate ACE_Node<Command *>
 #pragma instantiate ACE_Unbounded_Queue_Iterator<Command *>
 #pragma instantiate ACE_Unbounded_Queue<Command *>
 #endif /* ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
